# ai_game_dev

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .replit  .replit_types  CONTRIBUTING.md  Cargo.toml  PUBLISH.md  README.md  __main__.py  bevy_game_assets_config.toml  chainlit_main.py  create_multiple_game_demos.py  example_workflow_config.toml  generate_demo_assets.py  integration_report.json  justfile  main.py  master_spec_example.md  pyproject.toml  quality-report.html  quality-report.md  replit.md  replit.nix  run.sh  run_chainlit.sh  seed_example_config.toml  system_verification_report.json  uv.toml  world_generation_example.toml
.chainlit/: config.toml
.cursor/: prompts.md
.gemini/: config.yaml
.github/: copilot-instructions.md
.github/scripts/: generate_quality_report.py
.github/workflows/: ci.yml  pre-commit.yml  release.yml  static-analysis.yml
attached_assets/: Pasted--Remote-MCP-that-just-works-FastMCP-Cloud-is-here-FastMCP-home-pagedark-logo-Search-Navigati-1757119665214_1757119665215.txt  Pasted-That-is-fucking-stupid-You-are-writing-placeholders-and-PIL-code-when-you-were-explicitly-told-not--1757185599620_1757185599622.txt  Pasted-To-Impacted-Vectara-Customers-Ragie-is-here-to-help-with-tailored-migration-to-keep-your-team-and-c-1757136448335_1757136448336.txt  content-1757116003059.md  content-1757124834341.md  content-1757127052226.md  content-1757208838097.md  content-1757209209958.md  content-1757209782883.md  content-1757209980168.md  content-1757210805303.md
chainlit_custom_ui/public/: index.html
cpp/ai-game-dev/: CMakeLists.txt
cpp/ai-game-dev/include/: ai_game_dev.hpp
crates/bevy_game_dev/: Cargo.toml
crates/bevy_game_dev/src/: lib.rs
docs/: conf.py  getting-started.md  getting-started.rst  index.rst  installation.rst
docs/_static/: custom.css
docs/integration-guides/: cpp-integration.md  go-integration.md  nodejs-integration.md
docs/modules/: agents.rst  server.rst
examples/: README.md  user_game_spec.toml
examples/bevy_space_shooter/: Cargo.toml
examples/bevy_space_shooter/src/: main.rs
examples/game_specs/: educational_rpg.toml  platformer.toml  space_shooter.toml
examples/pygame_tower_defense/: main.py
games/bevy/: retro_raycast_revolution.toml
games/godot/: neural_nexus_3d.toml
games/pygame/: neotokyo_code_academy.toml
generated_examples/: generation_summary.json
generated_examples/arcade_education/: generation_log.json
generated_examples/bevy_hex_rts/: generation_log.json
generated_examples/godot_adventure/: generation_log.json
generated_games/: README.md  demo_platformer.py  puzzle_platformer.py  puzzle_platformer_README.md  rpg_battle.py  rpg_battle_README.md  space_shooter.py  space_shooter_README.md  tower_defense.py  tower_defense_README.md
generated_projects/bevy_project/: PROJECT_OVERVIEW.md
generated_projects/godot_project/: PROJECT_OVERVIEW.md
generated_projects/pygame_project/: PROJECT_OVERVIEW.md
go/ai-game-dev/: main.go
nodejs/ai-game-dev/: binding.gyp
public/: chainlit-app.js  custom.html  readme.md  style.css
public/components/: Academy.js  Workshop.js
python/arcade_game_dev/: README.md
python/pygame_game_dev/: README.md
rust/bevy_game_dev/: README.md
scripts/: process_image.py  quickstart.py
src/: lib.rs
src/ai_game_dev/: README.md  __init__.py  __main__.py  advanced_generators.py  agent.py  bevy_assets_simple.py  cache.py  cache_config.py  cache_manager.py  chainlit_app.py  chainlit_custom_app.py  cli.py  config.py  config_batch_processor.py  constants.py  content_validator.py  engine_adapters.py  game_specification.py  generators.py  internal_cli.py  langchain_tools.py  langgraph_agents.py  library.py  logging_config.py  main.py  minimal_server.py  models.py  narrative_system.py  performance.py  project_manager.py  protocols.py  providers.py  run_server.py  rust_bindings.py  seed_system.py  server.py  simple_server.py  spec_analyzer.py  startup.py  startup_assets.py  (+5 more)
src/ai_game_dev/agents/: arcade_academy_agent.py  base_agent.py  bevy_agent.py  godot_agent.py  internal_agent.py  master_orchestrator.py  pygame_agent.py
src/ai_game_dev/assets/: __init__.py  archive_seeder.py  asset_registry.py  asset_tools.py  generator.py  image_processor.py  process_logos.py
src/ai_game_dev/audio/: __init__.py  audio_tools.py  music_generator.py  tool.py  tts_generator.py
src/ai_game_dev/compilation/: create_go_bindings.py
src/ai_game_dev/deployment/: __init__.py  deploy_manager.py  pygbag_deploy.py
src/ai_game_dev/education/: __init__.py  characters_and_story.py  complete_rpg_generator.py  education_server.py  game_generator.py  rpg_specification.py  run_education.py  yarn_dialogue.py
src/ai_game_dev/engine_specs/: bevy.toml  godot.toml  pygame.toml
src/ai_game_dev/engines/: __init__.py  (+3 more)
src/openai_mcp_server/: __init__.py  agent_system.py  analyzers.py  bevy_assets.py  config.py  content_validator.py  exceptions.py  export_formats.py  langchain_tools.py  langgraph_agents.py  logging_config.py  main.py  metrics.py  models.py  narrative_system.py  seed_system.py  server.py  spec_analyzer.py  utils.py  yarn_integration.py
tests/: __init__.py  conftest.py  test_chainlit_app.py  test_engine_generation.py  test_integrated_system.py  test_langchain_tools.py  test_new_engine_system.py  test_server_htmy.py  test_server_jinja.py  test_server_unified.py  test_workspace_integration.py
tests/e2e/: README.md  conftest.py  run_all_e2e_tests.py  setup_summary.json  test_arcade_e2e.py  test_bevy_e2e.py  test_godot_e2e.py  test_pygame_e2e.py  test_real_generation.py  test_runner.py
tests/unit/: test_arcade_academy.py  test_audio_tools.py  test_basic.py  test_cache.py  test_chainlit_app_functions.py  test_comprehensive.py  test_config.py  test_config_complete.py  test_coverage_boost.py  test_deployment.py  test_engines.py  test_generators.py  test_generators_comprehensive.py  test_main.py  test_models.py  test_project_manager.py  test_providers.py  test_providers_comprehensive.py  test_variant_system.py
web_portal/: app.py  pyproject.toml
(+154 files in other folders)
